# marthisawsutils

./: README.md  awsutil.py  dbutil.py  pyproject.toml  requirements.txt  setup.py
src/mtawsutils/: apiutils.py
